# unterm

./: .gitignore  Cargo.toml  HANDOFF.md  LICENSE.md  Makefile  README.md  get-deps
.github/workflows/: ci.yml  gen_centos9.yml  gen_centos9_continuous.yml  gen_centos9_tag.yml  gen_debian11.yml  gen_debian11_continuous.yml  gen_debian11_tag.yml  gen_debian12.yml  gen_debian12_continuous.yml  gen_debian12_tag.yml  gen_fedora39.yml  gen_fedora39_continuous.yml  gen_fedora39_tag.yml  gen_fedora40.yml  gen_fedora40_continuous.yml  gen_fedora40_tag.yml  gen_fedora41.yml  gen_fedora41_continuous.yml  gen_fedora41_tag.yml  gen_macos.yml  gen_macos_continuous.yml  gen_macos_tag.yml  gen_ubuntu20.04.yml  gen_ubuntu20.04_continuous.yml  gen_ubuntu20.04_tag.yml  gen_ubuntu22.04.yml  gen_ubuntu22.04_continuous.yml  gen_ubuntu22.04_tag.yml  gen_ubuntu24.04.yml  gen_ubuntu24.04_continuous.yml  gen_ubuntu24.04_tag.yml  gen_windows.yml  gen_windows_continuous.yml  gen_windows_tag.yml  pages.yml  release-linux.yml  release-macos.yml  release-windows.yml
assets/: unterm.appdata.xml  unterm.desktop  unterm.lua
assets/icon/: update.sh
assets/macos/: Repair Finder Integration.command
assets/macos/FinderSync/: FinderSyncExtension.swift  Info.plist
ci/: appimage.sh  build-macos-finder-sync.sh  build-msi.ps1  deploy.sh  release-mac.sh  sign-macos.sh
config/src/: background.rs  color.rs  config.rs  font.rs  frontend.rs  keyassignment.rs  lib.rs  terminal.rs  unix.rs
crates/unterm-app/: Cargo.toml  build-frontend.js  tauri.conf.json
crates/unterm-app/capabilities/: default.json
crates/unterm-app/frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  screenshot-selector.html
crates/unterm-app/frontend/css/: screenshot.css  settings.css  style.css  tabs.css  terminal.css
crates/unterm-app/frontend/js/: main.js  profiles.js  screenshot.js  settings.js  split.js  tabs.js  terminal.js  themes.js
crates/unterm-app/src/: bridge.rs  main.rs  proxy.rs  screenshot.rs
crates/unterm-cli/: Cargo.toml
crates/unterm-cli/locales/: en.toml  zh-CN.toml
crates/unterm-cli/src/: client.rs  main.rs
crates/unterm-core/: Cargo.toml
crates/unterm-core/src/: grid.rs  lib.rs  main.rs  term.rs
crates/unterm-core/src/mcp/: mod.rs  protocol.rs  router.rs  transport.rs
crates/unterm-core/src/orchestrate/: mod.rs
crates/unterm-core/src/proxy/: mod.rs
crates/unterm-core/src/pty/: mod.rs
crates/unterm-core/src/screen/: mod.rs
crates/unterm-core/src/session/: mod.rs
crates/unterm-proto/: Cargo.toml
crates/unterm-proto/src/: exec.rs  lib.rs  orchestrate.rs  proxy.rs  screen.rs  security.rs  session.rs  workspace.rs
crates/unterm-ui/: Cargo.toml
crates/unterm-ui/locales/: en.toml  zh-CN.toml
crates/unterm-ui/src/: clipboard.rs  main.rs  menu.rs  mouse.rs
crates/unterm-ui/src/bridge/: mod.rs
crates/unterm-ui/src/client/: mod.rs
crates/unterm-ui/src/config/: mod.rs
crates/unterm-ui/src/input/: mod.rs
crates/unterm-ui/src/layout/: mod.rs
crates/unterm-ui/src/render/: mod.rs
docs/: API.md  changelog.md
docs/archive/: 2026-04-16-native-terminal-rewrite.md  2026-04-17-mihomo-proxy-integration.md  2026-04-21-block-terminal-design.md  2026-04-21-block-terminal-plan.md  2026-04-23-super-terminal-rewrite.md
docs/plans/: 2026-04-15-unterm-design.md  2026-04-24-wezterm-engine-rewrite.md
filedescriptor/src/: windows.rs
installer/: License.rtf  Unterm.wxs
mux/src/: connui.rs  domain.rs  lib.rs  localpane.rs  pane.rs  ssh.rs  termwiztermtab.rs  tmux_commands.rs
scripts/: install-context-menu.ps1  install-context-menu.reg  uninstall-context-menu.reg
term/src/: config.rs
term/src/terminalstate/: mod.rs
tools/: unterm-mcp-server.js
web/: .gitignore  astro.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.mjs
web/functions/api/: stats.ts
web/public/: _headers  install.ps1  install.sh
web/src/components/: Page.astro
web/src/i18n/: de-DE.json  en-US.json  fr-FR.json  hi-IN.json  it-IT.json  ja-JP.json  ko-KR.json  locales.ts  zh-CN.json  zh-TW.json
web/src/layouts/: Base.astro  Doc.astro
web/src/lib/: stats.ts
web/src/pages/: index.astro
wezterm/: Cargo.toml
wezterm-dynamic/: Cargo.toml
wezterm-font/src/: lib.rs
wezterm-font/src/locator/: gdi.rs
wezterm-gui/: Cargo.toml  build.rs
wezterm-gui-subcommands/src/: lib.rs
wezterm-gui/assets/settings/: app.js  index.html  style.css
wezterm-gui/src/: commands.rs  download.rs  frontend.rs  ghost_text.rs  inputmap.rs  main.rs  renderstate.rs  server_info.rs  session_state.rs  spawn.rs  system_proxy.rs  tabbar.rs  update.rs  update_check.rs
wezterm-gui/src/ai/: auto_detect.rs  client.rs  mod.rs  models.rs
wezterm-gui/src/i18n/: detect.rs  mod.rs
wezterm-gui/src/mcp/: handler.rs  mod.rs  server.rs
wezterm-gui/src/overlay/: ai_settings.rs  confirm.rs  confirm_close_pane.rs  context_menu.rs  mod.rs  proxy_settings.rs  settings_menu.rs  shell_selector.rs  tab_context_menu.rs  theme_selector.rs
wezterm-gui/src/recording/: index.rs  mod.rs  recorder.rs  redact.rs  render.rs
wezterm-gui/src/termwindow/: box_model.rs  keyevent.rs  mod.rs  mouseevent.rs  resize.rs
wezterm-input-types/src/: lib.rs
wezterm-mux-server/: Cargo.toml
wezterm-mux-server/src/: main.rs
wezterm-toast-notification/src/: macos.rs  windows.rs
wezterm/src/: main.rs
window/src/: connection.rs  lib.rs
(+45 files in other folders)
