[workspace]
resolver = "2"
members = [
    "crates/unterm-core",
    "crates/unterm-ui",
    "crates/unterm-cli",
    "crates/unterm-proto",
    "crates/unterm-app",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/AICrossBorder/unterm"
description = "Unzoo Terminal — AI 时代的超级工作台"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
