[package]
name = "unterm-mux"
version = "0.9.0"
authors = ["Alex <lixd220@gmail.com>"]
edition = "2018"
resolver = "2"
publish = false

[[bin]]
name = "unterm-mux"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
async_ossl.workspace = true
clap.workspace = true
config.workspace = true
env-bootstrap.workspace = true
libc.workspace = true
log.workspace = true
mux.workspace = true
mlua.workspace = true
openssl.workspace = true
portable-pty = { workspace=true, features = ["serde_support"]}
promise.workspace = true
umask.workspace = true
wezterm-blob-leases = {workspace=true, features=["simple_tempdir"]}
wezterm-mux-server-impl.workspace = true
wezterm-gui-subcommands.workspace = true
wezterm-term.workspace = true

[target."cfg(windows)".dependencies]
winapi = { workspace=true, features = [ "winuser" ]}

[target.'cfg(windows)'.build-dependencies]
embed-resource.workspace = true
cc.workspace = true
