[package]
name = "unterm-app"
version.workspace = true
edition.workspace = true

[[bin]]
name = "unterm-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
dirs = "5"
reqwest = { version = "0.12", features = ["blocking", "json"] }
rand = "0.8"
zip = "2"
serde_yaml = "0.9"
image = { version = "0.25", default-features = false, features = ["png"] }
chrono = "0.4"
rfd = "0.15"
unterm-core = { path = "../unterm-core" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
    "Win32_UI_Shell",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
] }
