[package]
name = "unterm-core"
version.workspace = true
edition.workspace = true
description = "Unterm daemon：PTY 管理、Session 生命周期、MCP Server、内置代理"

[[bin]]
name = "unterm-core"
path = "src/main.rs"

[dependencies]
unterm-proto = { path = "../unterm-proto" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
