[package]
name = "unterm-core"
version.workspace = true
edition.workspace = true
description = "Unterm daemon：PTY 管理、Session 生命周期、MCP Server、内置代理"

[[bin]]
name = "unterm-core"
path = "src/main.rs"

[dependencies]
unterm-proto = { path = "../unterm-proto" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
portable-pty = "0.9"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
