[package]
name = "unterm-ui"
version.workspace = true
edition.workspace = true
description = "Unterm GUI：wgpu 渲染终端界面"

[[bin]]
name = "unterm-ui"
path = "src/main.rs"

[dependencies]
unterm-proto = { path = "../unterm-proto" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
