[package]
name = "unterm-ui"
version.workspace = true
edition.workspace = true
description = "Unterm GUI：wgpu 渲染终端界面"

[[bin]]
name = "unterm-ui"
path = "src/main.rs"

[dependencies]
unterm-proto = { path = "../unterm-proto" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
wgpu = "24"
winit = "0.30"
fontdue = "0.9"
bytemuck = { version = "1", features = ["derive"] }
rust-i18n = "3"
pollster = "0.4"
toml = "0.8"
arboard = "3"
image = "0.25"
chrono = "0.4"
